--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
+    <!-- header -->
     <div class="navbar-header">
+      <!-- toggle btn -->
         <button type="button" 
                 class="navbar-toggle collapsed" 
                 data-toggle="collapse" 
@@ -12,16 +14,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+        <!-- brand -->
       <a href="#" class="navbar-brand">Phresh Chef</a>
     </div>
-
-
+    <!-- collapse items-->
     <div id="navbar" class="collapse navbar-collapse navbar-right">
       <ul class="nav navbar-nav">
         <li><a href="#">Recipes</a></li>
         <li><a href="#">Shopping</a></li>
       </ul>
-      
+      <!-- dropdown menu -->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" 
