--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,4 +1,28 @@
-<div>
-  <app-recipe-item></app-recipe-item>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success center">Add Recipe</button>
+  </div>
 </div>
+<hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <a href="#" 
+         class="list-group-item clearfix"
+         *ngFor="let recipe of recipes">
+        <div class="pull-left">
+          <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+          <p class="list-group-item-text">{{ recipe.desc }}</p>
+          <p class="list-group-item-text">{{ recipe.cat }}</p>
+        </div>
+        <span class="pull-right">
+          <img style="max-height: 60px;" 
+               class="img-responsive" 
+               [src]="recipe.imgURL"
+               alt="{{ recipe.name }}">
+        </span>
+        <!-- <app-recipe-item></app-recipe-item> -->
+      </a>
+    </div>
+  </div>
+
 
