--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,27 @@
-<p>
-  shopping-edit works!
-</p>
+
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <div class="row">
+        <div class="col-sm-2 form-group">
+              <label for="name">Name</label>
+              <input id="name" type="text" class="form control" >
+        </div>
+        <div class="col-sm-2 form-group">
+              <label for="quantity">Quantity</label>
+              <input id="quantity" type="number" step=".01" class="form control">
+        </div>
+        <div class="col-sm-2 form-group">
+                <label for="measure">Unit</label>
+                <input id="measure" type="text" class="form control">
+          </div>
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit">Edit</button>
+          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-primary" type="button">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
