--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,18 @@
   <div class="col-xs-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <p>Shopping List</p>
+
+    <ul class="list-group">
+      <li>
+        <a class="list-group-item" 
+           *ngFor="let ingredient of ingredients">
+           <div>
+             <span>{{ ingredient.name }},</span>
+             <span>{{ ingredient.quantity }}</span>
+             <span>{{ ingredient.measure }}</span>
+          </div>
+        </a>
+        </li>
+    </ul>
   </div>
 </div>
